# BLOG

./: pyproject.toml
backend/: db.sqlite3  pyproject.toml
backend/api/: serializer.py  urls.py  views.py
backend/blogapp/: models.py  urls.py  views.py
backend/blogapp/migrations/: 0001_initial.py  0002_post_user_tag_post_meta_post_comment_post_author_id_and_more.py  0003_category_post.py  0004_remove_category_parent_id_remove_post_parent_id_and_more.py
backend/blogapp/static/blogapp/: style.css
backend/blogapp/templates/blogapp/: FAQ.html  about.html  article.html  contact.html  index.html  layout.html
backend/mysite/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  axios-api.js  main.js
frontend/src/assets/: main.css
frontend/src/components/: Card.vue  Footer.vue  categorieCard.vue  categoriesView.vue  createForm.vue  editForm.vue  navbar.vue  settings.vue
frontend/src/data/: data.js
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  Article.vue  ArticleCreated.vue  CategorieView.vue  CreateView.vue  HomeView.vue  IndexView.vue  LoginView.vue  LogoutView.vue  SignUpView.vue
